oauth2-proxy/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - name: oauth2-proxy
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
          args:
            - --provider=keycloak-oidc
            - --oidc-issuer-url=https://auth.jakob-lingel.dev/realms/personal
            - --redirect-url=https://oauth2.jakob-lingel.dev/oauth2/callback
            - --cookie-domain=.jakob-lingel.dev
            - --cookie-secure=true
            - --cookie-samesite=lax
            - --email-domain=*
            - --set-xauthrequest=true
            - --pass-user-headers=true
            - --allowed-role=personal-access
            - --whitelist-domain=.jakob-lingel.dev
            - --http-address=0.0.0.0:4180
            - --upstream=static://204
          ports:
            - containerPort: 4180
              name: http
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
