oauth2-proxy/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 4180
      targetPort: 4180
  selector:
    app: oauth2-proxy
